# mini_rl_environment

./: .env.example  .gitignore  .hfignore  Dockerfile  README.md  benchmark_results.csv  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  test_env_standalone.py
server/: app.py  environment.py
tests/: evaluate_scores.py  test_grader.py
