[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hallucination-detector"
version = "1.0.0"
description = "RL environment for detecting hallucinations in LLM outputs"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
    "python-dotenv",
    "httpx",
]

[project.scripts]
server= "server.app:main"
